Novo cadastro de informações médicas e correções.
Adicionadas novas informações sobre dados médicos, corrigida a formatação do schema de todos os cadastros e adicionado também tratamento de erro para as rotas.
