# src/schema/cadastro.schema.js
@@ -1,54 +1,56 @@
 const mongoose = require("mongoose");
 
 const cadastroSchema = new mongoose.Schema({
-    nomeCompleto: String,
-    nomeDaMae: String,
-    nomeDoPai: String,
-    naturalidade: String,
-    nacionalidade: String,
-    idade: Number,
-    dataDeNascimento: String,
-    estadoCivil: String,
-    raca: String,
-    escolaridade: String,
-    profissao: String,
-    CPF: String,
-    sexo: String,
-    RG: String,
-    estadoEmissor: String,
-    dataDeEmissaoRG: String,
-    orgaoEmissor: String,
-    CEP: String,
-    endereco: String,
-    estado: String,
-    municipio: String,
-    bairro: String,
-    unidadeDeOrigem: String,
-    numeroDeInternacoes: Number,
-    contatoDeEmergencia1: String,
-    contatoDeEmergencia2: String,
-    dataDeSaida: String,
-    matricula: String,
-    possuiFilhos: Boolean,
-    situacaoDeRua: Boolean,
-    tempoDeRua: String,
-    tempoDeDrogadicao: String,
-    tiposDeDrogas: String,
-    usaMedicamentos: Boolean,
-    doencasCuidados: Boolean,
-    alergia: Boolean,
-    acompanhamentoPsiquiatrico: Boolean,
-    respondeProcesso: Boolean,
-    recebeBeneficio: Boolean,
-    religiao: String,
-    igrejaEvangelica: Boolean,
-    batizado: Boolean,
-    casaDeRecuperacao: Boolean,
-    jaFoiAcolhido: Boolean,
-    deficiencia: Boolean,
-    antecedentesCriminais: Boolean,
-    fazNasHorasVagas: String,
-    consideracoesDeAtendimento: String
+    nomeCompleto: { type: String, required: true },
+    nomeDaMae: { type: String, required: true },
+    nomeDoPai: { type: String },
+    naturalidade: { type: String, required: true },
+    nacionalidade: { type: String, required: true },
+    idade: { type: Number, required: true },
+    dataDeNascimento: { type: String, required: true },
+    estadoCivil: { type: String, required: true },
+    raca: { type: String, required: true },
+    escolaridade: { type: String, required: true },
+    profissao: { type: String, required: true },
+    CPF: { type: String, required: true },
+    sexo: { type: String, required: true },
+    RG: { type: String, required: true },
+    estadoEmissor: { type: String, required: true },
+    dataDeEmissaoRG: { type: String, required: true },
+    orgaoEmissor: { type: String, required: true },
+    CEP: { type: String, required: true },
+    endereco: { type: String, required: true },
+    estado: { type: String, required: true },
+    municipio: { type: String, required: true },
+    bairro: { type: String, required: true },
+    unidadeDeOrigem: { type: String, required: true },
+    numeroDeInternacoes: { type: Number, required: true },
+    contatosDeEmergencia: {
+        numero1: { type: String, required: true },
+        numero2: { type: String },
+    },
+    dataDeSaida: { type: String, required: true },
+    matricula: { type: String, required: true },
+    possuiFilhos: { type: Boolean, required: true },
+    situacaoDeRua: { type: Boolean, required: true },
+    tempoDeRua: { type: String, required: true },
+    tempoDeDrogadicao: { type: String, required: true },
+    tiposDeDrogas: { type: String, required: true },
+    usaMedicamentos: { type: Boolean, required: true },
+    doencasPrecisaCuidados: { type: Boolean, required: true },
+    alergia: { type: Boolean, required: true },
+    acompanhamentoPsiquiatrico: { type: Boolean, required: true },
+    respondeProcesso: { type: Boolean, required: true },
+    recebeBeneficio: { type: Boolean, required: true },
+    religiao: { type: String, required: true },
+    igrejaEvangelica: { type: Boolean, required: true },
+    batizado: { type: Boolean, required: true },
+    casaDeRecuperacao: { type: Boolean, required: true },
+    jaFoiAcolhido: { type: Boolean, required: true },
+    deficiencia: { type: Boolean, required: true },
+    antecedentesCriminais: { type: Boolean, required: true },
+    fazNasHorasVagas: { type: String },
+    consideracoesDeAtendimento: { type: String},
 });
 
 const cadastroModel = mongoose.model("acolhido", cadastroSchema);
